more stest script